--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
@@ -17,7 +17,7 @@ body {
         height: 100vh;
         /* background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
         /* background: #D3D3D3; */
-        background-image: url("../public/bg.jpg");
+        background-image: url("../public/background_5.jpg");
         position: fixed;
         left: 0;
         top: 0;
